Replaced "synchronized" keyword with "StampedLock" to improve compatibility with virtual threads.